# test_e_network

./: .env.example  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
data/: data.json  providers.json
e_trading_network/: asgi.py  settings.py  urls.py  wsgi.py
providers/: admin.py  models.py  serializers.py  urls.py  views.py
providers/migrations/: 0001_initial.py  0002_remove_company_products_companyprodacts.py  0003_rename_companyprodacts_companyproducts.py
users/: admin.py
users/migrations/: 0001_initial.py
